style.css
@font-face {
  font-family: "Moderniz";
  src: url("/fonts/moderniz.otf") format("opentype");
  font-weight: normal;
  font-style: normal;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body,
#app {
  height: 100%;
  width: 100%;
  color: ghostwhite;
}

:root {
  --color-bg1: rgb(108, 0, 162);
  --color-bg2: rgb(19, 11, 46);
  --color1: 18, 113, 255;
  --color2: 221, 74, 255;
  --color3: 100, 220, 255;
  --color4: 200, 50, 50;
  --color5: 180, 180, 50;
  --color-interactive: 140, 100, 255;
  --circle-size: 90%;
  --blending: hard-light;
  --primary-font: "Moderniz", sans-serif;
  --secondry-font: "Helvetica Now Display", sans-serif;
}

/* BACKGROUND ANIMATIONS */
@keyframes moveInCircle {
  0% {
    transform: rotate(0deg);
  }
  50% {
    transform: rotate(180deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes moveVertical {
  0% {
    transform: translateY(-50%);
  }
  50% {
    transform: translateY(50%);
  }
  100% {
    transform: translateY(-50%);
  }
}

@keyframes moveHorizontal {
  0% {
    transform: translateX(-50%) translateY(-10%);
  }
  50% {
    transform: translateX(50%) translateY(10%);
  }
  100% {
    transform: translateX(-50%) translateY(-10%);
  }
}

.background {
  width: 100vw;
  height: 100vh;
  position: fixed;
  z-index: -1;
  overflow: hidden;
  background: linear-gradient(40deg, #0e1010, var(--color-bg2));
  top: 0;
  left: 0;

  .bg-overlay{
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 3;
    opacity: .4;
    background-image: url(/noise.png);
  }

  /* .noise-filter-svg {
    position: absolute;
  } */

  .gradients-container {
    filter: url(#goo) blur(40px);
    width: 100%;
    height: 100%;
  }

  .g1 {
    position: absolute;
    background: radial-gradient(
        circle at center,
        rgba(var(--color1), 0.4) 0,
        rgba(var(--color1), 0) 50%
      )
      no-repeat;
    mix-blend-mode: var(--blending);

    width: var(--circle-size);
    height: var(--circle-size);
    top: calc(50% - var(--circle-size) / 2);
    left: calc(50% - var(--circle-size) / 2);

    transform-origin: center center;
    animation: moveVertical 25s ease infinite;

    opacity: 1;
  }

  .g2 {
    position: absolute;
    background: radial-gradient(
        circle at center,
        rgba(var(--color2), 0.4) 0,
        rgba(var(--color2), 0) 50%
      )
      no-repeat;
    mix-blend-mode: var(--blending);

    width: var(--circle-size);
    height: var(--circle-size);
    top: calc(50% - var(--circle-size) / 2);
    left: calc(50% - var(--circle-size) / 2);

    transform-origin: calc(50% - 400px);
    animation: moveInCircle 30s reverse infinite;

    opacity: 1;
  }

  .g3 {
    position: absolute;
    background: radial-gradient(
        circle at center,
        rgba(var(--color3), 0.4) 0,
        rgba(var(--color3), 0) 50%
      )
      no-repeat;
    mix-blend-mode: var(--blending);

    width: var(--circle-size);
    height: var(--circle-size);
    top: calc(50% - var(--circle-size) / 2 + 200px);
    left: calc(50% - var(--circle-size) / 2 - 500px);

    transform-origin: calc(50% + 400px);
    animation: moveInCircle 30s linear infinite;

    opacity: 1;
  }

  .interactive {
    position: absolute;
    background: radial-gradient(
        circle at center,
        rgba(var(--color-interactive), 0.8) 0,
        rgba(var(--color-interactive), 0) 40%
      )
      no-repeat;
    mix-blend-mode: var(--blending);
    width: 100%;
    height: 100%;
    top: -50%;
    left: -50%;
    opacity: 0.7;
  }
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-family: "Moderniz";
  ul {
    display: flex;
    list-style: none;
    gap: 3vw;
  }

  a {
    text-decoration: none;
    color: white;
    font-size: 0.7vw;
  }
  a:hover {
    mix-blend-mode: normal;
  }
  .logo {
    font-size: 1.5vw;
  }
}

.hero {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: fit-content;
  width: 100%;
}

.hero-page {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
  padding: 1.5% 4% 0.8% 4%;
}

.hero-h1 {
  font-family: var(--primary-font);
  width: 90%;
  text-align: center;
  font-size: 5vw;
  mix-blend-mode: overlay;
}

.hero-h1::selection {
  background-color: #f0ffff6c;
}

.hero p {
  font-family: var(--secondry-font);
  font-size: 1.3vw;
  width: 50%;
  text-align: center;
  font-weight: 400;
  color: #d1d1d1;
  mix-blend-mode: color-dodge;
}

.hero p::selection {
  background-color: #f0ffff27;
}

.social-links {
  display: flex;
  flex-direction: column;
  gap: 3vw;
  a {
    text-decoration: none;
    font-family: var(--secondry-font);
    color: #d1d1d1;
  }
  a:hover {
    mix-blend-mode: color-dodge;
  }
  .links-list {
    display: flex;
    gap: 1.5vw;
  }
}

.hero-showcase {
  display: flex;
  justify-content: space-between;
  align-items: center;
  text-transform: uppercase;

  font-family: var(--secondry-font);
  h3 {
    font-size: 0.9vw;
    font-weight: 500;
    width: 70%;
  }
  p {
    width: 60%;
    font-size: 0.8vw;
    font-weight: 400;
    text-transform: capitalize;
  }
  .about-showcase,
  .availibility-showcase {
    display: flex;
    flex-direction: column;
    gap: 0.7vw;
    width: fit-content;
  }
}

.scroll-arrow {
  align-self: flex-end;
  display: block;
  margin-left: auto;
}
/* ... */

